date added-note: | api loads slow

--- a/test-4/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
+++ b/test-4/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
@@ -93,7 +93,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="date" class="form-label"> Date </label>
-                                    <input type="text" class="form-control" [ngModel]="" name="date">
+                                    <input type="date" class="form-control" [ngModel]="" name="date">
                                 </div>
                                 <!-- ldsflkds -->
                                 <!-- <button class="btn btn-primary"(click)="myFormData(NewProgramData.value)">Submit</button> -->
@@ -194,7 +194,7 @@
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field> -->
 
-    <!-- modal khatam  -->
+    <!-- modal ended  -->
 
 
     <!-- Main -->
