--- a/test-4/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
+++ b/test-4/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
@@ -38,7 +38,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Buildings</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -54,6 +54,11 @@
                                 <ng-multiselect-dropdown [placeholder]="'Wing'"
                                     [settings]="dropdownSettings" [data]="dropdownList" [(ngModel)]="selectedItems"
                                     (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+                                </ng-multiselect-dropdown>
+
+                                <ng-multiselect-dropdown [placeholder]="'Campus'" 
+                                    [settings]="dropdownSettings2" [data]="dropdownList2" [(ngModel)]="selectedItems2"
+                                    (onSelect)="onItemSelect2($event)" (onSelectAll)="onSelectAll2($event)" id="two">
                                 </ng-multiselect-dropdown>
 
 
@@ -129,12 +134,21 @@
                                         name="buildingName">
                                 </div>
 
-                                <select [(ngModel)]="selectedItem" *ngIf="newArray" class="form-select form-select-sm"
+                                <!-- <select [(ngModel)]="selectedItem" *ngIf="newArray" class="form-select form-select-sm"
                                     aria-label=".form-select-sm example" [ngModelOptions]="{standalone: true}">
                                     <option value="" disabled selected>Select an option</option>
                                     <option *ngFor="let item of newArray" [ngValue]="campusId">{{ item.name }}</option>
-                                </select>
+                                </select> -->
 
+                                <ng-multiselect-dropdown [placeholder]="'Wing'"
+                                [settings]="dropdownSettings" [data]="dropdownList" [(ngModel)]="selectedItems"
+                                (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
+                            </ng-multiselect-dropdown>
+
+                            <ng-multiselect-dropdown [placeholder]="'Campus'" 
+                                [settings]="dropdownSettings2" [data]="dropdownList2" [(ngModel)]="selectedItems2"
+                                (onSelect)="onItemSelect2($event)" (onSelectAll)="onSelectAll2($event)" id="two">
+                            </ng-multiselect-dropdown>
 
 
                                 <div class="mb-3">
@@ -171,13 +185,13 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="date" class="form-label"> Date </label>
-                                    <input type="text" class="form-control" [ngModel]="" name="date">
+                                    <!-- <input type="text" class="form-control" [ngModel]="" name="date"> -->
+                                    {{editData.Date_constructed}}
+                                    <input type="date" name="dateEdit" id="dateEdit" [ngModel]="editData.Date_constructed">
                                 </div>
-
                                 <!-- mat ui date -->
 
 
-                                <!-- ldsflkds -->
                                 <!-- <button class="btn btn-primary"(click)="myFormData(NewProgramData.value)">Submit</button> -->
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
@@ -188,13 +202,7 @@
 
         </div>
     </div>
-    <!-- <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field> -->
 
-    <!-- modal ended  -->
 
 
     <!-- Main -->
